@startuml
class User {
  _id : ObjectId
  name : String
  email : String
  password : String
  role : "client" | "admin"
}

class Supplier {
  _id : ObjectId
  userId : ObjectId
  name : String
  contact : String
  email : String
  phone : String
  address : String
}

class Invoice {
  _id : ObjectId
  userId : ObjectId
  supplierId : ObjectId
  amount : Number
  dueDate : Date
  status : "unpaid" | "partially_paid" | "paid"
  details : String
}

class Payment {
  _id : ObjectId
  invoiceId : ObjectId
  amount : Number
  paymentDate : Date
  mode_paiement : String
  note : String
}

User "1" --o "*" Supplier : owns
User "1" --o "*" Invoice : owns
Supplier "1" --o "*" Invoice : linked to
Invoice "1" --o "*" Payment : has
@enduml
